# campus-events-aws-cloudformation

./: .env.local.template  .gitignore  README.md  app.py  pyproject.toml  sample_event.json
.devcontainer/: devcontainer.json
campus_events_cloudformation/: campus_events_cloudformation_stack.py
lib/: Event.py  fetch_new_events.py  hello_world.py
lib/config/: __init__.py  config.py  config.yml
lib/config/environments/: prod.yml
lib/functions/rss_to_csv/: handler.py  requirements.txt
lib/functions/rss_to_raw_bucket/: Dockerfile  rss_to_raw_bucket_fn.py
lib/infrastructure/: __init__.py  api_stack.py  dl_stack.py  lake_formation_stack.py  scripts_resources_stack.py
lib/infrastructure/stacks/: __init__.py  analytics_resources_stack.py  dl_stack.py  glue_resources_stack.py
lib/pipeline/functions/: api_get_event_names.py  list_brz_files_fn.py  rss_to_bronze_fn.py
lib/pipeline/functions/csv_to_dynamo_table/: csv_to_dynamo_table_fn.py
lib/pipeline/functions/rss_to_bronze/: rss_to_bronze_fn.py
lib/pipeline/functions/silver_to_dynamo_events/: silver_to_dynamo_events_fn.py
lib/pipeline/jobs/: xml_to_parquet.py
lib/pipeline/scripts/: ce_types.py  uc_types.py
lib/pipeline/scripts/glue/: bronze_to_silver.py  silver_to_dynamo_events.py  (+1 more)
lib/pipeline/stacks/: __init__.py  bronze_to_silver_workflow_stack.py  dynamodb_stack.py  get_rss_lambda_stack.py  rss_orchestrator_stack.py  silver_to_dynamo_events_workflow_stack.py  xml_to_parquet_glue_job_stack.py
lib/scripts/: event.py  transform_xml_to_csv.py
lib/scripts/transform/: xml_to_csv.py
lib/stacks/: __init__.py  dynamodb_stack.py  lambda_stack.py  lamnda_stack.py  raw_to_csv_glue_job_stack.py  rss_lambda_stack.py  s3_csv_stack.py
tests/fixtures/: events_20251211_060736.xml
tests/unit/: test_campus_events_cloudformation_stack.py  test_fetch_new_events.py  test_hello_world.py  test_xml_to_csv.py
